--- a/cv/index.html
+++ b/cv/index.html
@@ -19,7 +19,7 @@
 
 
 
-<title>CV - Zhenkai Liang</title>
+<title>CV - Home</title>
 
 
 
@@ -64,7 +64,7 @@
 
 <!-- Open Graph protocol data (https://ogp.me/), used by social media -->
 <meta property="og:locale" content="en-US">
-<meta property="og:site_name" content="Zhenkai Liang"> 
+<meta property="og:site_name" content="Home"> 
 <meta property="og:title" content="CV">
 
 
@@ -77,7 +77,7 @@
 
 <!-- end Open Graph protocol -->
 
-<link href="https://www.comp.nus.edu.sg/~liangzk/feed.xml" type="application/atom+xml" rel="alternate" title="Zhenkai Liang Feed">
+<link href="https://www.comp.nus.edu.sg/~liangzk/feed.xml" type="application/atom+xml" rel="alternate" title="Home Feed">
 
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
@@ -125,7 +125,7 @@
       <nav id="site-nav" class="greedy-nav">
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
-          <li class="masthead__menu-item masthead__menu-item--lg persist"><a href="https://www.comp.nus.edu.sg/~liangzk/">Zhenkai Liang</a></li>
+          <li class="masthead__menu-item masthead__menu-item--lg persist"><a href="https://www.comp.nus.edu.sg/~liangzk/">Home</a></li>
           
             
             <li class="masthead__menu-item"><a href="https://www.comp.nus.edu.sg/~liangzk/research/">Research</a></li>
@@ -262,7 +262,7 @@
 
 <p>I am a member of the Steering Commmittee of ACM CCS and have served as a member of the Steering Group of NDSS. I have served as technical committee members and editorial board members of top security conferences and journals, including ACM Conference on Computer and Communications Security (CCS), USENIX Security Symposium, Network and Distributed System Security Symposium (NDSS), IEEE Transactions on Dependable and Secure Computing (TDSC), and ACM Transactions on Privacy and Security (TOPS).</p>
 
-<p>I received my Ph.D. degree in Computer Science from Stony Brook University in 2006 and B.S. degrees in Computer Science and in Economics from Peking University in 1999.</p>
+<p>I received my Ph.D. degree in Computer Science from Stony Brook University in 2006 and B.S. degree in Computer Science and B.S. degree in Economics (CCER) from Peking University in 1999.</p>
 
 <p>My full CV is <a href="https://www.comp.nus.edu.sg/~liangzk/papers/liangzk-cv-full.pdf">here</a>.</p>
 
@@ -420,7 +420,7 @@ Publications
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-11-09
+  Site last updated 2025-11-18
 </div>
 
       </footer>
