--- a/research/index.html
+++ b/research/index.html
@@ -19,7 +19,7 @@
 
 
 
-<title>Research - Zhenkai Liang</title>
+<title>Research - Home</title>
 
 
 
@@ -64,7 +64,7 @@
 
 <!-- Open Graph protocol data (https://ogp.me/), used by social media -->
 <meta property="og:locale" content="en-US">
-<meta property="og:site_name" content="Zhenkai Liang"> 
+<meta property="og:site_name" content="Home"> 
 <meta property="og:title" content="Research">
 
 
@@ -77,7 +77,7 @@
 
 <!-- end Open Graph protocol -->
 
-<link href="https://www.comp.nus.edu.sg/~liangzk/feed.xml" type="application/atom+xml" rel="alternate" title="Zhenkai Liang Feed">
+<link href="https://www.comp.nus.edu.sg/~liangzk/feed.xml" type="application/atom+xml" rel="alternate" title="Home Feed">
 
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
@@ -125,7 +125,7 @@
       <nav id="site-nav" class="greedy-nav">
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
-          <li class="masthead__menu-item masthead__menu-item--lg persist"><a href="https://www.comp.nus.edu.sg/~liangzk/">Zhenkai Liang</a></li>
+          <li class="masthead__menu-item masthead__menu-item--lg persist"><a href="https://www.comp.nus.edu.sg/~liangzk/">Home</a></li>
           
             
             <li class="masthead__menu-item"><a href="https://www.comp.nus.edu.sg/~liangzk/research/">Research</a></li>
@@ -262,7 +262,7 @@
 
 <h1 id="research-directions">Research Directions</h1>
 
-<h3 id="system-security-and-cyber-experimentation-analysis">System security and cyber experimentation analysis</h3>
+<h3 id="system-security-and-cyber-experimentation">System security and cyber experimentation</h3>
 <p><a href="https://www.comp.nus.edu.sg/~liangzk/publications/system.html">[Related Publications]</a></p>
 <ul>
   <li>Kernel mechanisms for confidential computing</li>
@@ -270,7 +270,7 @@
   <li>Cyber experimentation as code</li>
 </ul>
 
-<h3 id="software-security-and-malicious-application-analysis">Software security and malicious application analysis</h3>
+<h3 id="software-security-and-program-analysis">Software security and program analysis</h3>
 <p><a href="https://www.comp.nus.edu.sg/~liangzk/publications/software.html">[Related Publications]</a></p>
 <ul>
   <li>Scalable binary/program analysis for vulnerability discovery</li>
@@ -283,14 +283,14 @@
 <ul>
   <li>Application of AI and recommendation system in software and system security</li>
   <li>LLM security analysis using software security techniques</li>
-  <li>Agent system analysis and security</li>
+  <li>Agentic system analysis and protection</li>
 </ul>
 
-<h3 id="beyond-security-and-systems">Beyond security and systems</h3>
+<h3 id="security-beyond-systems">Security beyond systems</h3>
 <p><a href="https://www.comp.nus.edu.sg/~liangzk/publications/beyond.html">[Related Publications]</a></p>
 <ul>
   <li>Online scam prevention</li>
-  <li>Financial modeling of cyber crime and cyber incidents</li>
+  <li>Financial modeling of cyber crime and incidents, economics of cyber security</li>
   <li>Cyber insurance and cyber risk analysis</li>
 </ul>
 
@@ -325,7 +325,7 @@
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-11-09
+  Site last updated 2025-11-18
 </div>
 
       </footer>
