--- a/hobby/index.html
+++ b/hobby/index.html
@@ -19,7 +19,7 @@
 
 
 
-<title>Hobby - Zhenkai Liang</title>
+<title>Hobby - Home</title>
 
 
 
@@ -64,7 +64,7 @@
 
 <!-- Open Graph protocol data (https://ogp.me/), used by social media -->
 <meta property="og:locale" content="en-US">
-<meta property="og:site_name" content="Zhenkai Liang"> 
+<meta property="og:site_name" content="Home"> 
 <meta property="og:title" content="Hobby">
 
 
@@ -77,7 +77,7 @@
 
 <!-- end Open Graph protocol -->
 
-<link href="https://www.comp.nus.edu.sg/~liangzk/feed.xml" type="application/atom+xml" rel="alternate" title="Zhenkai Liang Feed">
+<link href="https://www.comp.nus.edu.sg/~liangzk/feed.xml" type="application/atom+xml" rel="alternate" title="Home Feed">
 
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
@@ -125,7 +125,7 @@
       <nav id="site-nav" class="greedy-nav">
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
-          <li class="masthead__menu-item masthead__menu-item--lg persist"><a href="https://www.comp.nus.edu.sg/~liangzk/">Zhenkai Liang</a></li>
+          <li class="masthead__menu-item masthead__menu-item--lg persist"><a href="https://www.comp.nus.edu.sg/~liangzk/">Home</a></li>
           
             
             <li class="masthead__menu-item"><a href="https://www.comp.nus.edu.sg/~liangzk/research/">Research</a></li>
@@ -263,7 +263,7 @@
 
 <p>What truly matters is the inner sense of flow:  the flow of body movement and coordination in sport, 
 the flow of phrasing and breath in music, and the flow of curiosity and ideas in research. 
-Achieving the right balance often requires easing off rather than applying more force. Too much direct effort leads to a false equilibrium! By respecting the natural logic inherent in each discipline and letting elegance and flow guide our efforts, with careful practice of foundational techniques, the results emerge naturally —
+Achieving the right balance often requires easing off rather than applying more force. Too much direct effort leads to a false equilibrium! By respecting the natural logic inherent in each discipline and letting elegance and flow guide our efforts, with careful practice of foundational techniques, the results emerge naturally,
 水到渠成 (“when the water arrives, the channel is formed”).</p>
 
 <p>In all these pursuits, achieving elegance is an “optimization problem:” Looking away from the direct output, 
@@ -277,9 +277,9 @@ balance and efficiency are achieved should force be deliberately added, transfor
 <h2 id="运动音乐与研究">运动、音乐与研究</h2>
 <p>我喜欢<a href="https://www.comp.nus.edu.sg/~liangzk/images/bike.jpg">骑车</a>与<a href="https://www.comp.nus.edu.sg/~liangzk/images/rbike.jpg">修车</a>(或称：自行车逆向工程）。动手的事物让我感到一种新奇与宁静。最近我开始尝试学习网球和小号。这些事情看似毫不相干，却在练习的过程中，让我重新理解了“研究”的内在含义。博士训练往往漫长而严格，有人调侃Ph.D.是“永久性脑损伤” (Permenant Head Damage)。最终我没能抵挡这些训练对我的思维的影响，还是去写了一篇关于网球的<a href="https://tennis-ans.github.io">论文</a>. :)</p>
 
-<p>然而在这样的训练中，我学到的不只是如何写论文，更是如何观察、体会和思考事物背后的系统性联系。我发现运动、音乐和研究之间存在着出乎意料的相似之处。在这三个领域中，人们往往会被最直接的目标吸引 — 运动里的网球击球、音乐中的乐器发声，和研究中的论文发表。但卓越的真正根源，从来不是这些外在的直接结果。最符合直觉、最显而易见的路径，可能很快有结果，但往往不是通向卓越的那一条，甚至会是完全背道而驰，形似神非。</p>
+<p>然而在这样的训练中，我学到的不只是如何写论文，更是如何观察、体会和思考事物背后的系统性联系。我发现运动、音乐和研究之间存在着出乎意料的相似之处。在这三个领域中，人们往往会被最直接的目标吸引：运动里的网球击球、音乐中的乐器发声，和研究中的论文发表。但卓越的真正根源，从来不是这些外在的直接结果。最符合直觉、最显而易见的路径，可能很快有结果，但往往不是通向卓越的那一条，甚至会是完全背道而驰，形似神非。</p>
 
-<p>决定一切的，是内心中的流动性 — 运动中身体协调与节奏的流动，音乐中呼吸与旋律的流动，以及研究中的好奇与思路的流动。它们的共同点在于：只有学会顺势而为，而不是费力拉扯，平衡才会出现。其间真正的挑战是如何学会去收力，而不是去盲目发力。在直接的目标上过度用力会陷在一个错误的平衡中。真正的掌控，来自紧张中恰到好处的放松，而不是更大的用力。尊重事物本身的规律，以其中的优雅和流动性为导向，在正确的基本上方法上努力积累，结果会自然出现 — 水到渠成。大道至简，隐于形外。</p>
+<p>决定一切的，是内心中的流动性：运动中身体协调与节奏的流动，音乐中呼吸与旋律的流动，以及研究中的好奇与思路的流动。它们的共同点在于：只有学会顺势而为，而不是费力拉扯，平衡才会出现。其间真正的挑战是如何学会去收力，而不是去盲目发力。在直接的目标上过度用力会陷在一个错误的平衡中。真正的掌控，来自紧张中恰到好处的放松，而不是更大的用力。尊重事物本身的规律，以其中的优雅和流动性为导向，在正确的基本上方法上努力积累，结果会自然出现 — 水到渠成。大道至简，隐于形外。</p>
 
 <p>这种过程是一种“优化问题”。要获得优雅的效率，就必须把注意力从结果上移开，转向理解过程本身。先让动作、思考或技巧达到自然的协调，再去逐渐增加力量并保持平衡和从容。努力并非目标，而是平衡与效率的自然累积。自然天成，源自从容。</p>
 
@@ -307,7 +307,7 @@ balance and efficiency are achieved should force be deliberately added, transfor
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Page last updated 2025-11-08.
+  Page last updated 2025-11-08
 </div>
 
       </footer>
