--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 
-<title>Welcome to Zhenkai’s Homepage! - Zhenkai Liang</title>
+<title>Welcome to Zhenkai’s Homepage! - Home</title>
 
 
 
@@ -64,7 +64,7 @@
 
 <!-- Open Graph protocol data (https://ogp.me/), used by social media -->
 <meta property="og:locale" content="en-US">
-<meta property="og:site_name" content="Zhenkai Liang"> 
+<meta property="og:site_name" content="Home"> 
 <meta property="og:title" content="Welcome to Zhenkai’s Homepage!">
 
 
@@ -77,7 +77,7 @@
 
 <!-- end Open Graph protocol -->
 
-<link href="https://www.comp.nus.edu.sg/~liangzk/feed.xml" type="application/atom+xml" rel="alternate" title="Zhenkai Liang Feed">
+<link href="https://www.comp.nus.edu.sg/~liangzk/feed.xml" type="application/atom+xml" rel="alternate" title="Home Feed">
 
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
@@ -125,7 +125,7 @@
       <nav id="site-nav" class="greedy-nav">
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
-          <li class="masthead__menu-item masthead__menu-item--lg persist"><a href="https://www.comp.nus.edu.sg/~liangzk/">Zhenkai Liang</a></li>
+          <li class="masthead__menu-item masthead__menu-item--lg persist"><a href="https://www.comp.nus.edu.sg/~liangzk/">Home</a></li>
           
             
             <li class="masthead__menu-item"><a href="https://www.comp.nus.edu.sg/~liangzk/research/">Research</a></li>
@@ -282,7 +282,7 @@
   <li>Connect facts (参悟规律).</li>
 </ul>
 
-<p><strong>Be interesting people, do meaningful work</strong> is the ethos we live by. We strive to embody this ethos — to think deeply, collaborate openly, and act purposefully, seeking <em>elegance in thought</em> and <em>meaning in action</em>.</p>
+<p><strong>Be interesting people, do meaningful work</strong> is the ethos we live by. We strive to embody this ethos: to think deeply, collaborate openly, and act purposefully, seeking <em>elegance in thought</em> and <em>meaning in action</em>.</p>
 
 <p>I am also the co-lead Principal Investigator of <a href="https://ncl.sg">National Cybersecurity R&amp;D Laboratory (NCL)</a> of Singapore. In NCL, we carry out research, development, and support for cyber experimentation and cyber exercise.</p>
 
@@ -339,7 +339,7 @@
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-11-09
+  Site last updated 2025-11-18
 </div>
 
       </footer>
