--- a/cv/index.html
+++ b/cv/index.html
@@ -256,13 +256,13 @@
     
       <h1 class="page__title">CV</h1>
     
-    <p>I am a faculty member in the Department of Computer Science, School of Computing, National University of Singapore. I am also a co-Lead Principal Investigator of National Security R&amp;D Lab of Singapore.</p>
+    <p>I am a faculty member in the Department of Computer Science, School of Computing, National University of Singapore. I am also a co-Lead Principal Investigator of the National Security R&amp;D Lab of Singapore.</p>
 
-<p>My research interests are in systems and security, including binary program analysis, system provenance analysis, cyber security experimentation, security in emerging platforms, such as Web, mobile, and Internet-of-things (IoT), and AI platforms. My research also invesigate security problems beyond the system boudary from the angle of ecnomics, finance, and risk management. I have been publishing high-impact papers in top security and software engineering conferences. I has won nine best/distinguished paper awards from my research and seven Teaching Excellence Award from NUS and School of Computing.</p>
+<p>My research interests are in systems and security, including binary program analysis, system provenance analysis, cybersecurity experimentation, security in emerging platforms, such as the Web, mobile, and Internet of Things (IoT), and AI platforms. My research also investigates security problems beyond the system boundary from the angle of economics, finance, and risk management. I have been publishing high-impact papers in top security and software engineering conferences. I have won nine best/distinguished paper awards from my research and seven Teaching Excellence Awards from NUS and the School of Computing.</p>
 
-<p>I am a member of the Steering Commmittee of ACM CCS and have served as a member of the Steering Group of NDSS. I have served as technical committee members and editorial board members of top security conferences and journals, including ACM Conference on Computer and Communications Security (CCS), USENIX Security Symposium, Network and Distributed System Security Symposium (NDSS), IEEE Transactions on Dependable and Secure Computing (TDSC), and ACM Transactions on Privacy and Security (TOPS).</p>
+<p>I am a member of the Steering Committee of ACM CCS and have served as a member of the Steering Group of NDSS. I have served as technical committee members and editorial board members of top security conferences and journals, including ACM Conference on Computer and Communications Security (CCS), USENIX Security Symposium, Network and Distributed System Security Symposium (NDSS), IEEE Transactions on Dependable and Secure Computing (TDSC), and ACM Transactions on Privacy and Security (TOPS).</p>
 
-<p>I received my Ph.D. degree in Computer Science from Stony Brook University in 2006 and B.S. degree in Computer Science and B.S. degree in Economics (CCER) from Peking University in 1999.</p>
+<p>I received my Ph.D. degree in Computer Science from Stony Brook University in 2006 and a B.S. degree in Computer Science and a B.S. degree in Economics (CCER) from Peking University in 1999.</p>
 
 <p>My full CV is <a href="https://www.comp.nus.edu.sg/~liangzk/papers/liangzk-cv-full.pdf">here</a>.</p>
 
@@ -420,7 +420,7 @@ Publications
 
 <div class="page__footer-copyright">
   &copy; 2025 Zhenkai Liang, Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.<br />
-  Site last updated 2025-11-18
+  Site last updated 2025-12-04
 </div>
 
       </footer>
